# metube-extended

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.domain.yml  docker-compose.ip.yml  docker-compose.yml  docker-entrypoint.sh  gallerydl-integration-plan.md  install-local.sh  install-prebuilt.sh  install.sh  installer-core.sh  pyproject.toml  seedr-roadmap.md
.github/workflows/: ci.yml  main.yml  release.yml  update-gallery-dl.yml  update-yt-dlp.yml
app/: auth.py  gallerydl_credentials.py  gallerydl_manager.py  hq-dl.py  hqporner.py  main.py  proxy_downloads.py  seedr_credentials.py  seedr_manager.py  streaming.py  users.py  ytdl.py  ytdlp_cookies.py
jules-scratch/verification/: verify_concurrent_downloads.py
scripts/: docker-clean.sh  fetch-ui-bundle.sh  set-resource-limits.sh
ui/: angular.json  eslint.config.js  package-lock.json  package.json
ui/.angular/cache/19.2.17/metube/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
ui/src/: index.html  manifest.webmanifest  styles.sass
ui/src/app/: api-base.util.ts  api-prefix.interceptor.ts  app-routing.module.ts  app.component.html  app.component.sass  app.component.ts  app.module.ts  downloads.service.ts  metube-socket.ts
ui/src/app/admin/: admin-routing.module.ts  admin.component.html  admin.component.sass  admin.component.ts  admin.module.ts
ui/src/app/admin/gallery/: admin-gallery-routing.module.ts  admin-gallery.component.ts  (+3 more)
ui/src/app/dashboard/: dashboard-shared.module.ts  dashboard.component.html  dashboard.component.sass  dashboard.component.ts  dashboard.module.ts
(+27 files in other folders)
