[project]
name = "metube"
version = "0.1.0"
description = "Web GUI for youtube-dl (using yt-dlp) with playlist support"
requires-python = ">=3.13, <3.14"
dependencies = [
    "aiohttp",
    "python-socketio>=5.0,<6.0",
    "yt-dlp[default,curl-cffi]",
    "mutagen",
    "curl-cffi",
    "watchfiles",
    "aiohttp-session",
    "bcrypt",
    "pynacl",
    "cryptography",
    "psutil",
    "anyio",
    "httpx",
    "seedrcc>=2.0.1",
]

[dependency-groups]
dev = [
    "pylint",
]
